--- a/Lab5_Anagrammi/src/it/polito/tdp/anagrammi/controller/Anagrammi.fxml
+++ b/Lab5_Anagrammi/src/it/polito/tdp/anagrammi/controller/Anagrammi.fxml
@@ -1,6 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.anagrammi.controller.AnagrammiController"/>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="544.0" prefWidth="536.0" xmlns="http://javafx.com/javafx/9.0.4" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.anagrammi.controller.AnagrammiController">
+   <center>
+      <VBox prefHeight="510.0" prefWidth="570.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox alignment="CENTER" prefHeight="34.0" prefWidth="536.0" spacing="30.0">
+               <children>
+                  <TextArea fx:id="txtParola" maxHeight="30.0" prefHeight="19.0" prefWidth="200.0" promptText="Inserire parola">
+                     <HBox.margin>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                     </HBox.margin>
+                  </TextArea>
+                  <Button fx:id="btnCalcola" mnemonicParsing="false" onAction="#doCalcola" prefHeight="32.0" prefWidth="186.0" text="Calcola Anagrammi" />
+               </children>
+            </HBox>
+            <Label text="Anagrammi Corretti">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </Label>
+            <TextArea fx:id="txtCorretti" prefHeight="300.0" prefWidth="200.0">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </TextArea>
+            <Label layoutX="10.0" layoutY="72.0" text="Anagrammi Errati">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </Label>
+            <TextArea fx:id="txtErrati" prefHeight="300.0" prefWidth="580.0">
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
+            </TextArea>
+            <HBox alignment="CENTER_LEFT" prefHeight="82.0" prefWidth="600.0">
+               <children>
+                  <Button fx:id="btnReset" alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" onAction="#doReset" prefHeight="27.0" prefWidth="93.0" text="Reset">
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </center>
+   <top>
+      <Label prefHeight="34.0" prefWidth="106.0" text="Lab5_Anagrammi" BorderPane.alignment="CENTER" />
+   </top>
+</BorderPane>
